--- a/src/kicad/generators/templates/keyboard.kicad_pcb/diode.ejs
+++ b/src/kicad/generators/templates/keyboard.kicad_pcb/diode.ejs
@@ -1,4 +1,5 @@
-(module keyboard_parts:D_SOD123_axial (layer F.Cu) (tedit 561B6A12) (tstamp <%= data.id %>)
+(module keyboard_parts:D_SOD123_axial (layer F.Cu) (tedit 561B6A12)
+    (tstamp <%= data.key.id.toString(16) %>1)
     (at
     <%= data.x + 0.5 %>
     <%= data.y + 0.5 %>
