feat: crystal and crystal caps

--- a/src/kicad/generators/templates/keyboard.kicad_pcb/crystal.ejs
+++ b/src/kicad/generators/templates/keyboard.kicad_pcb/crystal.ejs
@@ -1,4 +1,4 @@
-(module Crystal:Crystal_SMD_5032-4Pin_5.0x3.2mm (layer B.Cu) (tedit 5A0FD1B2) (tstamp <%= data.id %>)
+(module Crystal:Crystal_SMD_5032-4Pin_5.0x3.2mm (layer B.Cu) (tedit 5A0FD1B2) (tstamp <%= data.tstamp %>)
     (at <%= data.x %> <%= data.y %> <%= data.rotation %>)
     (descr "SMD Crystal SERIES SMD2520/4 http://www.icbase.com/File/PDF/HKC/HKC00061008.pdf, 5.0x3.2mm^2 package")
     (tags "SMD SMT crystal")
