feat: all components added to PCB

--- a/src/kicad/generators/templates/keyboard.kicad_pcb/micro.ejs
+++ b/src/kicad/generators/templates/keyboard.kicad_pcb/micro.ejs
@@ -1,4 +1,4 @@
-  (module Package_QFP:TQFP-44_10x10mm_P0.8mm (layer B.Cu) (tedit 5A02F146) (tstamp <%= data.id %>)
+  (module Package_QFP:TQFP-44_10x10mm_P0.8mm (layer B.Cu) (tedit 5A02F146) (tstamp <%= data.tstamp %>)
     (at <%= data.x %> <%= data.y %> <%= data.rotation %>)
     (descr "44-Lead Plastic Thin Quad Flatpack (PT) - 10x10x1.0 mm Body [TQFP] (see Microchip Packaging Specification 00000049BS.pdf)")
     (tags "QFP 0.8")
