--- a/src/kicad/generators/templates/keyboard.kicad_pcb/reset.ejs
+++ b/src/kicad/generators/templates/keyboard.kicad_pcb/reset.ejs
@@ -1,4 +1,4 @@
-  (module Button_Switch_SMD:SW_SPST_TL3342 (layer B.Cu) (tedit 5A02FC95) (tstamp <%= data.id %>)
+  (module Button_Switch_SMD:SW_SPST_TL3342 (layer B.Cu) (tedit 5A02FC95) (tstamp <%= data.tstamp %>)
     (at <%= data.x %> <%= data.y %> <%= data.rotation %>)
     (descr "Low-profile SMD Tactile Switch, https://www.e-switch.com/system/asset/product_line/data_sheet/165/TL3342.pdf")
     (tags "SPST Tactile Switch")
