--- a/src/kicad/generators/templates/keyboard.kicad_pcb/usb.ejs
+++ b/src/kicad/generators/templates/keyboard.kicad_pcb/usb.ejs
@@ -1,4 +1,4 @@
-(module keyboard_parts:USB_miniB_hirose_5S8 (layer B.Cu) (tedit 5950B1FC) (tstamp <%= data.id %>)
+(module keyboard_parts:USB_miniB_hirose_5S8 (layer B.Cu) (tedit 5950B1FC) (tstamp <%= data.tstamp %>)
     (at <%= data.x %> <%= data.y %> <%= data.rotation %>)
     (descr "USB miniB hirose UX60SC-MB-5S8")
     (tags "USB miniB hirose through hole UX60SC-MB-5S8")
